--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,12 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <h1>We will make a blogpost here!</h1>
-    <p>This is first paragraph</p>
+    <div id="container">
+        <div id="post">
+            <h1>This is the attractive and interesting title of the post</h1>
+            <p>And this is the first paragraph where we go to explain the incredibles 
+                things that can make with branches.</p>
+        </div>
+    </div>
 </body>
 </html>
