Estructura inicial de la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            HEAD
+        </div>
         <div id="post">
             <h1>This is the attractive and interesting title of the post</h1>
             <p>And this is the first paragraph where we go to explain the incredibles 
