--- a/blogpost.html
+++ b/blogpost.html
@@ -11,12 +11,13 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            HEAD
+            Hyperblog
+            <span id="tagline">Your trust blog</span>
         </div>
         <div id="post">
             <h1>This is the attractive and interesting title of the post</h1>
-            <p>And this is the first paragraph where we go to explain the incredibles 
-                things that can make with branches.</p>
+            <p>And this is the first paragraph where we go to explain the 
+                incredibles things that can make with branches.</p>
         </div>
     </div>
 </body>
