Agregado el contenido adicional del blog y una mejor tipografía

--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,11 @@
             <h1>This is the attractive and interesting title of the post</h1>
             <p>And this is the first paragraph where we go to explain the incredibles 
                 things that can make with branches.</p>
+            <p>
+                Blogs are better option to share information and ideas. 
+                More better than to go to conferences or expose in YouTube 
+                (except if you are a rockstar), but statistically you aren't... for now.
+            </p>
         </div>
     </div>
 </body>
