--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">Your trust blog</span>
+            <span id="tagline">Your header blog</span>
         </div>
         <div id="post">
             <h1>This is the attractive and interesting title of the post</h1>
