--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">Your trust blog</span>
+            <span id="tagline">Your master blog</span>
         </div>
         <div id="post">
             <h1>This is the attractive and interesting title of the post</h1>
@@ -23,6 +23,7 @@
                 More better than to go to conferences or expose in YouTube 
                 (except if you are a rockstar), but statistically you aren't... for now.
             </p>
+            <p>Suscribe you and push like</p>
         </div>
     </div>
 </body>
