--- a/blogpost.html
+++ b/blogpost.html
@@ -26,6 +26,9 @@
             </p>
             <p>Suscribe you and push like</p>
         </div>
+        <div id="footer">
+            Made with love on Platzi <3
+        </div>
     </div>
 </body>
 </html>
