Tildes y typos arreglados en el post

--- a/blogpost.html
+++ b/blogpost.html
@@ -25,6 +25,7 @@
                 More better than to go to conferences or expose in YouTube 
                 (except if you are a rockstar), but statistically you aren't... for now.
             </p>
+            <!-- En este commit en el curso se corregían tildes, pero yo tengo el texto en inglés jajaja -->
             <p>Suscribe you and push like</p>
         </div>
         <div id="footer">
