Agregué una imagen al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -20,6 +20,7 @@
             <h1>This is the attractive and interesting title of the post</h1>
             <p>And this is the first paragraph where we go to explain the incredibles 
                 things that can make with branches.</p>
+            <p> <img src="imagenes/equipo.jpg" width="100%"/> </p>
             <p>
                 Blogs are better option to share information and ideas. 
                 More better than to go to conferences or expose in YouTube 
